preparing for making public

--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "PinStay",
   "version": "1.0",
-  "description": "Prevents pinned tabs from leaving their original domain.",
+  "description": "Prevents pinned tabs from leaving their original domain and being closed accidentally.",
   "permissions": ["tabs", "webNavigation", "scripting"],
 
   "host_permissions": ["<all_urls>"],
@@ -11,5 +11,14 @@
   },
   "action": {
     "default_title": "PinStay"
-  }
+  },
+  "icons": {
+    "128": "icon.png"
+  },
+  "web_accessible_resources": [
+    {
+      "resources": ["install.html", "uninstall.html"],
+      "matches": ["<all_urls>"]
+    }
+  ]
 }
