Final preparation for Chrome Web Store submission - direct Google Form uninstall

--- a/manifest.json
+++ b/manifest.json
@@ -17,7 +17,7 @@
   },
   "web_accessible_resources": [
     {
-      "resources": ["install.html", "uninstall.html"],
+      "resources": ["install.html"],
       "matches": ["<all_urls>"]
     }
   ]
