--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,13 @@ PinStay original.png
 makeicons.bat
 pinstay.zip
 PinStay Google Form Banner.png
-uninstall.html
+PinStay.mp4
 
 # Common files to ignore
 *.zip
 *.log
 .DS_Store
-Thumbs.db 
+Thumbs.db
+
+# Promotional materials
+promo/ 
